# plotter

./: .gitignore  Komentari.txt  README.md
Canvas/: CMakeLists.txt  plotlib.cmake
Canvas/inc/: canvas.h  function.h
Canvas/res/: main.xml
Canvas/res/plotter/: delete.psd  fitToWindow.psd
Canvas/src/: annotationDialog.h  canvas.cpp  canvas.h  function.cpp  graphWindow.h  txtDiaglog.cpp  txtDiaglog.h
EquationEditor/: CmakeLists.txt
EquationEditor/res/: DevRes.xml  main.xml
EquationEditor/src/: MenuBar.h  ToolBar.h  View.cpp  View.h  main.cpp  mainWindow.cpp  mainWindow.h  scroler.cpp  scroler.h
EquationToXML/: CmakeLists.txt  EqToXML.cmake
EquationToXML/inc/: generateXML.h  nodes.h
EquationToXML/src/: main.cpp  main.h
EquationToXML/src/lib/: Nodes.cpp  baseNode.cpp
Graph/: CMakeLists.txt  graph.cmake
Graph/inc/: Function.h  Graph.h  GraphDrawer.h
Graph/res/: DevRes.xml  main.xml
Graph/res/plotter/: grid.psd  (+5 more)
Graph/src/: AnnotationDialog.h  Function.cpp  Graph.cpp  GraphDrawer.cpp  Legend.h  TxtDiaglog.cpp  TxtDiaglog.h  settings.h
ModelMaker/: CMakeLists.txt  modelMaker.cmake
ModelMaker/res/: DevRes.xml  main.xml
ModelMaker/src/: AppSettings.h  BaseView.cpp  BaseView.h  DataDrawer.cpp  DataDrawer.h  GlobalEvents.cpp  GlobalEvents.h  MainWindow.cpp  MainWindow.h  MenuBar.h  ModelSettings.cpp  ModelSettings.h  SettingsDialog.h  Simulate.cpp  StartingView.cpp  StartingView.h  Table.h  ToolBar.h  main.cpp
Plot/src/: Function.cpp  Renderer.cpp  Settings.h  View.cpp
SymbolicEditor/: Komentari.txt
SymbolicEditor/ModelMaker/: CMakeLists.txt  modelMaker.cmake
TestProgram/: CMakeLists.txt  Crtac.cmake  build - Shortcut.lnk
TestProgram/res/: DevRes.xml  main.xml
TestProgram/src/: main.cpp  mainWindow.cpp  mainWindow.h  splitter.cpp  splitter.h  toolbar.h
common/: GraphLib.h  defineExportImport.h  property.cpp  property.h  to_color.cpp  to_string.h
modelMaker/: CMakeLists.txt
modelMaker/res/: DevRes.xml  main.xml
modelMaker/res/tr/BA/: main.xml
modelMaker/res/tr/EN/: main.xml
modelMaker/src/: AppSettings.h  MenuBar.h  ToolBar.h  baseView.cpp  baseView.h  dataDrawer.cpp  dataDrawer.h  globalEvents.cpp  globalEvents.h  main.cpp  mainWindow.cpp  mainWindow.h  modelSettings.cpp  modelSettings.h  settings.h  settingsDialog.h  simulate.cpp  startingView.h  table.h
modelMaker/src/guiEditor/: blockBase.cpp  blockBase.h  canvas.cpp  canvas.h  contextMenu.h  modelSettings.cpp  modelSettings.h  nlBlock.cpp  nlBlock.h  propertySwitcher.cpp  squareBlock.cpp  squareBlock.h  sumBlock.cpp  sumBlock.h  tBlock.cpp  tBlock.h  view.cpp  view.h
modelMaker/src/textEditor/: View.cpp  View.h  codeEdit.cpp  codeEdit.h  logView.h
transferFunctionEditor/: CMakeLists.txt
transferFunctionEditor/res/: DevRes.xml
transferFunctionEditor/src/: blockBase.cpp  blockBase.h  blockInterface.cpp  blockSettings.cpp  blockSettings.h  canvas.cpp  canvas.h  globals.cpp  globals.h  main.cpp  mainWindow.h  modelSettings.cpp  modelSettings.h  nlBlock.cpp  nlBlock.h  property.cpp  property.h  propertySwitcher.cpp  propertySwitcher.h  squareBlock.cpp  squareBlock.h  sumBlock.cpp  sumBlock.h  tBlock.cpp  tBlock.h  view.cpp  view.h
(+70 files in other folders)
